--- a/src/app/kanbanBoard/kanbanBoard.component.html
+++ b/src/app/kanbanBoard/kanbanBoard.component.html
@@ -13,12 +13,14 @@
               <div class="li-content layout-row justify-content-between align-items-center">
                   <span [attr.data-test-id]="generateTestId(task.name)+ '-name'">{{task.name}}</span>
                   <div class="icons">
-                    <button class="icon-only x-small mx-2"
+                    <button (click)='taskBack(task)' [disabled] = 'task.stage == 0'
+                            class="icon-only x-small mx-2"
                             [attr.data-test-id]="generateTestId(task.name)+ '-back'">
                       <i class="material-icons">arrow_back</i>
                     </button>
 
-                    <button class="icon-only x-small mx-2"
+                    <button (click)='taskForward(task)' [disabled] = 'task.stage == 3'
+                            class="icon-only x-small mx-2"
                             [attr.data-test-id]="generateTestId(task.name)+ '-forward'">
                       <i class="material-icons">arrow_forward</i>
                     </button>
